<resources >
    <string name="app_name">BvBBrasil</string>
    <string name="Textojogo1">
🏆BUNDESLIGA - 29° Rodada \
🐝BVB x MAINZ \
⏰Sáb -13/04- 13h30 \
📺Transmissão: FOX SPORTS\
\
Falaaa Auri-Negros beleza? Eis o moment de erguer a cabeça e fazer o que precisa ser feito!\
Para podermos desempenhar um bom futebol dentro de campo é necessário que os jogadores compreendam
que a Bundesliga ainda tem 18 pontos em disputa, é muita coisa que pode acontecer,\ e ter FIRMEZA
mental nessas horas será essencia, uma vez que o time nitidamente perdeu seu padrão de jogo e
fisicamente é visível o esgotamento de muitos atletas. Este pré jogo não irá problematizar ou
achar culpados pelo nosso atual moment,\ mas podemos listar o que podemos melhorar para conseguir
obter nossos objetivos. \
\
1. Concentração:\
O empate diante o Hoffenheim e a derrota para o Nuremberg são exemplos concretos de como o time
perde o foco rapidamente na partida, manter-se focado os 90 minutos e principalmente aproveitar as
devidas oportunidades (sempre temos muitas), certamente irá resultar em coisas positivas dentro de
campo.\
\
2. Compactação\
O time do BVB perdeu completamente sua compactação, pois no futebol jogado hoje em dia muitas
equipes procuram "diminuir o campo" jogando com linhas próximas, seja no setor defensivo ou
ofensivo, diminuindo o campo você diminui os espaços e repor taticamente fica mais fácil.
Um time espaçado e com "lacunas" tende fazer o atleta correr por ele e pelo companheiro que por
ventura abandonou sua posição. Sofremos muito principalmente no setor defensivo.\
\
3. Vontade\
Certa vez em 2002, o então técnico campeão Luis Felipe Scolari citou que em um time de futebol,
os jogadores precisam sentir FOME! Fome de querer VENCER e que ele procurava sempre jogadores com
este perfil, jogadores com fome de conquistas! Temos inúmeros bons exemplos de pensamentos de
técnicos, mas este em especial é o que descreve algum de nossos jogadores que visivelmente se
entregam na primeira dificuldade, para superarmos as adversidades, acima de qualquer tática o time
precisa TER VONTADE de vencer!. É isso auri-negros, hoje o pós saíra mais tarde, mas vai sair!\
\
Pré jogo:@joelbaluz\
Imagem:@reenan1991\
Briefing:andrevieira\
</string>
    <string name="texto">Seja bem-vindo ao Borussia Dortmund Brasil, a torcida oficial do BVB no Brasil! Criada em 2011, fundada em 12/08/13 e oficializada em 18/12/17 com objetivo de trazer nosso echte liebe pra perto dos fãs brasileiros.</string>
    <string name="facebook_offizieller_fanclub">Facebook Offizieller Fanclub</string>
    <string name="local_encontro">Local Encontro</string>
    <string name="fa_a_parte_do_bvb_brasil">Faça parte do BvB Brasil</string>
    <string name="twitter_offizieller_fanclub">Twitter Offizieller Fanclub</string>
    <string name="instagram_offizieller_fanclub">Instagram Offizieller Fanclub</string>
    <string name="youtube_offizieller_fanclub">Youtube Offizieller Fanclub</string>
    <string name="todo14">TODO14</string>
    <string name="bvb_x_augsburg">BvB x Augsburg</string>
    <string name="colonia_x_bvb">Colonia x BvB</string>
    <string name="hofenhein_x_bvb">Hofenhein x BvB</string>
    <string name="todo13">TODO13</string>
    <string name="bvb_x_leipzig">BvB x Leipzig</string>
    <string name="mains_x_bvb">Mains x BvB</string>
    <string name="bvb_x_fortuna_d">BvB x Fortuna D.</string>
    <string name="herta_b_x_bvb">Herta B. x BvB</string>
    <string name="bvb_x_paderborn">BvB x Paderborn</string>
    <string name="byern_m_x_bvb">Byern M. x BvB</string>
    <string name="bvb_x_wolfsburg">BvB x Wolfsburg</string>
    <string name="scheisse_x_bvb">Scheisse x BvB</string>
    <string name="bvb_x_b_monchengladbach">BvB x B. Monchengladbach</string>
    <string name="freiburg_x_bvb">Freiburg x BvB</string>
    <string name="bvb_x_w_bremen">BvB x W. Bremen</string>
    <string name="frankfurt_x_bvb">Frankfurt x BvB</string>
    <string name="bvb_x_bayer_l">BvB x Bayer L.</string>
    <string name="u_berlin_x_bvb">U.Berlin x BvB</string>
    <string name="todo12">TODO12</string>
    <string name="tabela_europeia">Tabela Europeia</string>
    <string name="analise_dos_jogos">Analise dos Jogos</string>
    <string name="todo11">TODO11</string>
    <string name="campeonato_alem_o">Campeonato Alemão</string>
    <string name="liga_europeia">Liga Europeia</string>
    <string name="super_copa_da_alemanha">Super Copa da Alemanha</string>
    <string name="copa_da_alemanha">Copa da Alemanha</string>
    <string name="encontros_redes_sociais">Encontros/Redes Sociais</string>
    <string name="todo10">TODO10</string>
    <string name="tabela_copa_da_alemanha">Tabela Copa da Alemanha</string>
    <string name="analise_jogos">Analise Jogos</string>
    <string name="todo9">TODO9</string>
    <string name="analise_instagram">Analise Instagram</string>
    <string name="final_super_copa_da_alemanha">Final Super Copa da Alemanha</string>
    <string name="todo8">TODO8</string>
    <string name="borussia_dortmund_brasil6">Borussia Dortmund Brasil</string>
    <string name="todo7">TODO7</string>
    <string name="borussia_dortmund_brasil5">Borussia Dortmund Brasil</string>
    <string name="todo6">TODO6</string>
    <string name="borussia_dortmund_brasil4">Borussia Dortmund Brasil</string>
    <string name="todo5">TODO5</string>
    <string name="todo4">TODO4</string>
    <string name="borussia_dortmund_brasil3">Borussia Dortmund Brasil</string>
    <string name="todo3">TODO3</string>
    <string name="borussia_dortmund_brasil2">Borussia Dortmund Brasil</string>
    <string name="todo2">TODO2</string>
    <string name="borussia_dortmund_brasil1">Borussia Dortmund Brasil</string>
    <string name="todo1">TODO1</string>
    <string name="analise_do_jogo">Analise do jogo</string>
    <string name="todo16" />
    <string name="todo15" />
    <string name="bvb_x_hofenhein" >BvB x Hofenhein></string>
    <string name="leipzig_x_bvb" >Leipzig x BvB</string>
    <string name="augsburg_x_bvb" >Augsburg x BvB</string>
    <string name="bvb_x_colonia" >BvB x Colonia</string>
    <string name="bvb_x_u_berlin" >BvB x U. Berlin</string>
    <string name="bayer_l_x_bvb" >Bayer x BvB</string>
    <string name="bvb_x_frankfurt" >BvB x Frankfurt</string>
    <string name="w_bremen_x_bvb" >W. Bremen x BvB</string>
    <string name="bvb_x_freiburg" >BvB x Freiburg</string>
    <string name="monchengladbach_x_bvb" >Monchengladbach x BvB</string>
    <string name="bvb_x_scheisse" >BvB x Scheisse</string>
    <string name="wolfsburg_x_bvb" >Wolfsburg x BvB</string>
    <string name="bvb_x_byern_m" >BvB x Bayern</string>
    <string name="paderborn_x_bvb" >Paderborn x BvB</string>
    <string name="bvb_x_herta_b" >BvB x Herta B.</string>
    <string name="fortuna_d_x_bvb" >Fortuna D. x BvB</string>
    <string name="bvb_x_mains" >BvB x Mains</string>
    <string name="Hofenhein_x_bvb">Hofenhein x BvB</string>
    <string name="todo20">Todo20</string>
    <string name="bundesliga">BUNDESLIGA</string>
    <string name="champions_league">CHAMPIONS LEAGUE</string>
    <string name="super_copa">SUPER COPA</string>
    <string name="pokal">POKAL</string>
    <string name="redes_cadsatro">REDES/CADSATRO</string>
</resources>
