
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCE501">

    <HorizontalScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bgImage4"
                android:layout_width="410dp"
                android:layout_height="352dp"
                android:background="#FCE501"
                android:contentDescription="@string/todo8"
                android:src="@drawable/bvbface" />

            <ImageView
                android:id="@+id/bgImage1"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:background="#FCE501"
                android:contentDescription="@string/todo15"
                android:src="@drawable/bvbgladbach" />
        </LinearLayout>
    </HorizontalScrollView>


    <Button
        android:id="@+id/Bundeslig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Pokal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="17dp"
        android:background="#FCE501"
        android:gravity="center"
        android:onClick="Bundesliga"
        android:text="@string/campeonato_alem_o"
        android:textColor="#050505"
        android:textColorHighlight="#FCE501"
        android:textColorLink="#00F3E709"
        android:textCursorDrawable="@drawable/gradient_background" />

    <Button
        android:id="@+id/ChampionsL"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_above="@+id/SuperCopa"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/ligadaeuropa"
        android:gravity="center"
        android:onClick="ChampionsL"
        android:text="@string/liga_europeia"
        android:textColor="#F7F5F5"
        android:textColorHighlight="#FCE501"
        android:textColorLink="#00F3E709"
        android:textCursorDrawable="@drawable/gradient_background" />

    <Button
        android:id="@+id/SuperCopa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Encontros"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="17dp"
        android:background="#FCE501"
        android:gravity="center"
        android:onClick="SuperCopa"
        android:text="@string/super_copa_da_alemanha"
        android:textColor="#050505"
        android:textColorHighlight="#FCE501"
        android:textColorLink="#00F3E709"
        android:textCursorDrawable="@drawable/gradient_background" />

    <Button
        android:id="@+id/Pokal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ChampionsL"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="17dp"
        android:background="#FCE501"
        android:gravity="center"
        android:onClick="Pokal"
        android:text="@string/copa_da_alemanha"
        android:textColor="#050505"
        android:textColorHighlight="#FCE501"
        android:textColorLink="#00F3E709"
        android:textCursorDrawable="@drawable/gradient_background" />

    <Button
        android:id="@+id/Encontros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="17dp"
        android:background="#FCE501"
        android:gravity="center"
        android:onClick="Encontros"
        android:text="@string/encontros_redes_sociais"
        android:textColor="#050505"
        android:textColorHighlight="#FCE501"
        android:textColorLink="#00F3E709"
        android:textCursorDrawable="@drawable/gradient_background" />


</RelativeLayout>

